# seedy

./: .gitignore  Dockerfile  LICENSE  README.md  build.sh  commits.html  compile-and-run.sh  docker-compose.yml  install-dependencies.sh  notes  run-tests.sh  run.sh  seedy.cabal  spec.sh  stack.yaml
app/: Main.hs
lib/: Pelias.hs  RobUnit.hs
src/: Commit.hs  GitListener.hs  JSONHandler.hs  JSONParser.hs  Lib.hs  NetworkAccessor.hs  RetrieveJSON.hs  SeedyPelias.hs  something.hs
test/: EndToEndTest.hs  Spec.hs
test/resources/: eatcheap.json
