name:                seedy
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/seedy#readme
license:             BSD3
license-file:        LICENSE
author:              Ivan Moore, Robert Moore
maintainer:          ivan@teamoptimization.com
copyright:           2017 Ivan Moore, Robert Moore
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , text
                     , blaze-html
                     , happstack-lite == 7.3.6
  default-language:    Haskell2010

executable seedy-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , seedy
                     , text
                     , blaze-html
                     , happstack-lite == 7.3.6
  default-language:    Haskell2010

test-suite seedy-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , seedy
                     , text
                     , blaze-html
                     , happstack-lite == 7.3.6
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/seedy
